# Health-Monitoring

./: .gitignore  LICENSE  README.md
.github/workflows/: client_deploy.yml  server_deploy.yml
client/: README.md  package.json  vue.config.js
client/public/: index.html
client/src/: main.js
client/src/api/: data.js  forecast.js  preference.js  rule.js  schedule.js  staff.js  statics.js  store.js
client/src/assets/css/: global.css
client/src/assets/sass/: app.scss
client/src/assets/sass/paper/: _responsive.scss
client/src/components/: SideBar.vue  index.js
client/src/components/SidebarPlugin/: MovingArrow.vue  SideBar.vue
client/src/layout/: ContentFooter.vue  HomeLayout.vue  TopNavbar.vue
client/src/plugins/: globalDirectives.js  paperDashboard.js
client/src/router/: index.js  routes.js
client/src/utils/: request.js
client/src/views/: Home.vue  NotFoundPage.vue  Statics.vue
docs/: database.md
sensor/: Cargo.toml  config.yaml
sensor/src/: data_type.rs  main.rs  vo.rs
server/: Cargo.toml  config.yaml
server/scripts/: Dockerfile.api  Dockerfile.static  create-service.sh  remove-service.sh
server/src/: common.rs  data.rs  lib.rs  main.rs
server/src/data/: controller.rs  data_type.rs  dto.rs  po.rs  vo.rs
