[package]
name = "health-monitoring-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
lazy_static = "1.4.0"
mysql_async = "0.32.2"
serde = { version = "1.0.163", features = ["derive"] }
