[package]
name = "health-monitoring-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["rkyv", "serde"] }
config = "0.13.3"
lazy_static = "1.4.0"
mongodb = "2.8.0"
futures = "0.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
